ver.1.3 for GitHub

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<div class="contents-area p-3 d-flex flex-column gap-3">
 		<div class="header-area p-2 d-flex justify-content-between align-items-end">
 			<div class="f-20b">テキストセッションログリーダー</div>
-			<div class="f-14m">ver.1.2</div>
+			<div class="f-14m">ver.1.3 for GitHub</div>
 		</div>
 		<div class="main-area d-flex gap-2">
 			<!-- 左エリア -->
@@ -120,6 +120,11 @@
 				<div class="left-area-bottom">
 					<div class="heading-1 f-18b">更新履歴</div>
 					<div class="update-frame p-2">
+						<div class="update-content d-flex gap-3">
+							<div>2024/04/08</div>
+							<div>ver.1.3 for GitHub</div>
+							<div>GitHub公開</div>
+						</div>
 						<div class="update-content d-flex gap-3">
 							<div>2024/01/22</div>
 							<div>ver.1.2</div>
