update history(for GitHub)

--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 					<div class="update-frame p-2">
 						<div class="update-content d-flex gap-3">
 							<div>2024/04/08</div>
-							<div>ver.1.3 for GitHub</div>
-							<div>GitHub公開</div>
+							<div>ver.1.3</div>
+							<div>for GitHub 公開</div>
 						</div>
 						<div class="update-content d-flex gap-3">
 							<div>2024/01/22</div>
